fixed arrow down link, fixed z-index of navbar to display correctly, installed react-scrollchor in previous commit

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -8,7 +8,7 @@
     background-position: fixed;
     position: relative;
     top: 0;
-    z-index: -1;
+    /* z-index: -1; */
     text-align: center;
 }
 
@@ -52,7 +52,7 @@
         background-position: fixed;
         position: relative;
         top: 0;
-        z-index: -1;
+        z-index: 0;
         text-align: center;
     }
 
